implementing user auth api in note api and updating note policy to accet user id
