# routes/api.php
@@ -1,8 +1,12 @@
 <?php
 
+use App\Http\Controllers\AuthUserController;
 use App\Http\Controllers\NoteController;
 use Illuminate\Http\Request;
+use Illuminate\Routing\RouteGroup;
+use Illuminate\Support\Facades\Http;
 use Illuminate\Support\Facades\Route;
+use OpenApi\Annotations\Get;
 
 /*
 |--------------------------------------------------------------------------
@@ -15,9 +19,22 @@ use Illuminate\Support\Facades\Route;
 |
 */
 
-Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
-    return $request->user();
-});
 
-Route::apiResource('notes', NoteController::class);
-Route::get('notes/user/{id}', [NoteController::class, 'usersNote']);
+
+
+Route::get('/users', [AuthUserController::class, 'getUserId']);
+Route::post('/user/register', [AuthUserController::class, 'register'])->name('api.register');
+Route::post('/user/login', [AuthUserController::class, 'login'])->name('api.login');
+
+
+Route::middleware('auth:api')->group(function () {
+    Route::apiResource('/notes', NoteController::class);
+
+    // Route::get('notes', [NoteController::class, 'index'])->name('notes.all');
+    // Route::put('update/{note}', [NoteController::class, 'update'])->name('update.note');
+    // Route::post('create', [NoteController::class, 'store'])->name('create.note');
+    // Route::delete('delete/{note}', [NoteController::class, 'destroy'])->name('delete.note');
+    // Route::get('show/{note}', [NoteController::class, 'show'])->name('show.note');
+
+    // Route::get('/notes/user/{id}', [NoteController::class, 'usersNote'])->name('user.all');
+});
